[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-video-downloader"
version = "0.1.0"
description = "A simple, fast and powerful video downloader API for social media platforms."
authors = [
  { name="Yasir Ali", email="yasirali.646@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "yt-dlp>=2023.3.4",
]

[tool.setuptools]
packages = ["social_media_video_downloader"]
